# Mr.Hedgehog

./: .gitignore  Cargo.toml  README.md  TECHNICAL_DESIGN.md  main.rs.bak  result.dot  test_macro.rs  test_trait_object.rs
benches/: scip_bench.rs
docs/: architecture.md  usecase.md
frontend/: CMakeLists.txt
frontend/resources/: resources.qrc
frontend/src/: graphview.cpp  graphview.h  main.cpp  mainwindow.cpp  mainwindow.h
scripts/: deploy_to_desktop.sh  generate_icon.sh  smoke_test.sh  tree_trace.py
src/: lib.rs  main.rs  main.rs.bak
src/api/: dto.rs  server.rs
src/application/: mod.rs
src/domain/: ast.rs  callgraph.rs  index.rs  mod.rs  scip_ingest.rs  store.rs  trace.rs
src/infrastructure/: concurrency.rs  mod.rs  mod.rs.bak  mod.rs.bak2  mod.rs.bak3  project_loader.rs  source_manager.rs
src/ports/: mod.rs  mod.rs.bak
test_advanced_ws/bin_demo/src/: main.rs
test_ws2/: Cargo.toml
test_ws2/bin_b/: Cargo.toml
test_ws2/bin_b/src/: main.rs
test_ws2/lib_a/: Cargo.toml
test_ws2/lib_a/src/: lib.rs
tests/: phase2_verification.rs  phase3_python_verification.rs
